# Dashboard

./: .dockerignore  .gitignore  README.md  WorkLog.md  dashboard-dev.Dockerfile  dashboard.Dockerfile  docker-compose-dev.yml  docker-compose.yml  mkdocs.yml  requirements.txt  setup.cfg  stream_datalog.py
dashboard/: callbacks.py  dashboard.py  dashboard.yaml
data_files/: README.md
dcharge/: utils.py
dcharge/dashboard/: callbacks.py  dashboard.py  dashboard.yaml
dcharge/dashboard/assets/: dropdown.css
docs/: demo.md
