
[metadata]
name = dcharge
version = 22.11.25
author = Asher Pembroke
author_email = apembroke@gmail.com
description = Distributed Charge Dashboard
url = http://andyschroder.com/DistributedCharge/
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3.7
	Operating System :: OS Independent
	License :: OSI Approved :: Apache Software License
license = Apache License Version 2.0

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  requests
  python-dotenv
  pandas
  plotly
  dash
  hydra-core==1.2.0


